<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_slideshow">

<!--    <fragment-->
<!--        android:id="@+id/nav_home"-->
<!--        android:name="com.lightcore.goaltracker_pro.ui.home.HomeFragment"-->
<!--        android:label="@string/menu_home"-->
<!--        tools:layout="@layout/fragment_home" >-->
<!--        <action-->
<!--            android:id="@+id/action_nav_home_to_SecondFragment"-->
<!--            app:destination="@id/SecondFragment" />-->
<!--    </fragment>-->

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.lightcore.goaltracker_pro.ui.stats.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.lightcore.goaltracker_pro.ui.onlTasx.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" >
        <action
            android:id="@+id/action_nav_slideshow_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.lightcore.goaltracker_pro.ui.ItemFragment"
        android:label="@string/steps_sub_task"
        tools:layout="@layout/fragment_item_list" />
    <fragment
        android:id="@+id/profile"
        android:name="com.lightcore.goaltracker_pro.ui.Profile.Profile"
        android:label="Profile"
        tools:layout="@layout/profile"/>
</navigation>