<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--    <?xml version="1.0" encoding="utf-8"?>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/tskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="13dp"
            android:textSize="20sp">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="13dp"
                android:text="@string/completed"
                android:textSize="9sp" />

            <TextView
                android:id="@+id/tskPrc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:textSize="10sp">

            </TextView>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/out_of"
                android:textSize="9sp" />

            <TextView
                android:id="@+id/tskSumm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp">

            </TextView>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last"
                android:textSize="9sp" />

            <TextView
                android:id="@+id/tskview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="10sp">

            </TextView>

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:max="100"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:progressDrawable="@drawable/sasdf" />


</FrameLayout>